# eeduro-platform

delta/: CMakeLists.txt  delta.cpp  deltaClient.cpp  deltaServer.cpp
delta/control/: CMakeLists.txt  ClientData.cpp  ClientData.hpp  ControlSystem.cpp  ControlSystem.hpp  ControlSystem_client.cpp  ControlSystem_client.hpp  ControlSystem_server.cpp  ControlSystem_server.hpp  PathPlanner.cpp  PathPlanner.hpp  ServerData.cpp  ServerData.hpp  Velocity2Position.cpp  Velocity2Position.hpp  constants.hpp  types.hpp
delta/control/client/: ControlSystem_client.cpp  ControlSystem_client.hpp
delta/control/server/: ControlSystem_server.cpp  ControlSystem_server.hpp
delta/safety/: CMakeLists.txt  DeltaSafetyProperties.cpp
delta/safety/client/: DeltaSafetyProperties_client.cpp  DeltaSafetyProperties_client.hpp
delta/safety/server/: DeltaSafetyProperties_server.cpp  DeltaSafetyProperties_server.hpp
delta/sequencer/: CMakeLists.txt  CalibrateSequence.cpp  DetectSequence.cpp  MainSequence.cpp  MainSequenceFaulhaber.cpp  MainSequenceFaulhaber.hpp  MoveBlockSequence.cpp  SortSequence.cpp  SortSequence.hpp
delta/sequencer/client/: CalibrateSequence_client.cpp  CalibrateSequence_client.hpp  DetectSequence_client.cpp  DetectSequence_client.hpp  MainSequenceFaulhaber_client.cpp  MainSequenceFaulhaber_client.hpp  MainSequence_client.cpp  MainSequence_client.hpp  MoveBlockSequence_client.cpp  MoveBlockSequence_client.hpp  SortSequence_client.cpp  SortSequence_client.hpp
delta/sequencer/server/: CalibrateSequence_server.cpp  CalibrateSequence_server.hpp  DetectSequence_server.cpp  DetectSequence_server.hpp  MainSequenceFaulhaber_server.cpp  MainSequenceFaulhaber_server.hpp  MainSequence_server.cpp  MainSequence_server.hpp  MoveBlockSequence_server.cpp  MoveBlockSequence_server.hpp  SortSequence_server.cpp  SortSequence_server.hpp
delta/socket/: CMakeLists.txt
eeduro/include/eeduro/: Board.hpp
test/: CMakeLists.txt  testClient.cpp  testServer.cpp  voltage.cpp
